ajuste en security configs e injeccion de dependencias en JwtUtil